lab, troubleshooting update

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -21,7 +21,8 @@
             <ion-toggle toggle-class="toggle-positive" id="personalPreferences-toggle8" class=" " ng-model = "is_warm" >Warm </ion-toggle>
             <label class="item item-input " id="personalPreferences-input2">
                 <span class="input-label" >Enter your preference:</span>
-                <input type="number" id = "warm" placeholder="" min="72" max="212" ng-disabled = "!is_warm" ng-model = "personal_warm"/>
+                <input type="number" id = "warm" ng-disabled = "!is_warm" ng-model = "personal_warm"/>
+                
             </label>
             
             <form id="personalPreferences-form7" class="list ">
