--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -21,29 +21,29 @@
             <ion-toggle toggle-class="toggle-positive" id="personalPreferences-toggle8" class=" " ng-model = "is_warm" >Warm </ion-toggle>
             <label class="item item-input " id="personalPreferences-input2">
                 <span class="input-label" >Enter your preference:</span>
-                <input type="number" id = "warm" ng-disabled = "!is_warm" ng-model = "personal_warm"/>
+                <input type="number" id = "warm" ng-disabled = "!is_warm" ng-model = "settings.personal_warm"/>
                 
             </label>
             
             <form id="personalPreferences-form7" class="list ">
-                <ion-toggle toggle-class="toggle-positive" id="personalPreferences-toggle9" class=" " ng-model = "is_warmer" >Warmer</ion-toggle>
+                <ion-toggle toggle-class="toggle-positive" id="personalPreferences-toggle9" class=" " ng-model = "settings.is_warmer" >Warmer</ion-toggle>
                 <label class="item item-input " id="personalPreferences-input3">
                     <span class="input-label">Enter your preference:</span>
-                    <input type="number" placeholder="" min="72" max="212" ng-disabled = "!is_warmer" ng-model = "personal_warmer"/>
+                    <input type="number" placeholder="" min="72" max="212" ng-disabled = "!is_warmer" ng-model = "settings.personal_warmer"/>
                 </label>
                 
                 <form id="personalPreferences-form8" class="list ">
-                    <ion-toggle toggle-class="toggle-positive" id="personalPreferences-toggle10" class=" " ng-model = "is_hot" >Hot</ion-toggle>
+                    <ion-toggle toggle-class="toggle-positive" id="personalPreferences-toggle10" class=" " ng-model = "settings.is_hot" >Hot</ion-toggle>
                     <label class="item item-input " id="personalPreferences-input4">
                         <span class="input-label">Enter your preference:</span>
-                        <input type="number" placeholder="" min="72" max="212" ng-disabled = "!is_hot" ng-model = "personal_hot"/>
+                        <input type="number" placeholder="" min="72" max="212" ng-disabled = "!is_hot" ng-model = "settings.personal_hot"/>
                     </label>
                     
                     <form id="personalPreferences-form9" class="list ">
-                        <ion-toggle toggle-class="toggle-positive" id="personalPreferences-toggle11" class=" " ng-model = "is_steaming" >Steaming</ion-toggle>
+                        <ion-toggle toggle-class="toggle-positive" id="personalPreferences-toggle11" class=" " ng-model = "settings.is_steaming" >Steaming</ion-toggle>
                         <label class="item item-input " id="personalPreferences-input5">
                             <span class="input-label">Enter your preference:</span>
-                            <input type="number" placeholder="" min="72" max="212" ng-disabled = "!is_steaming" ng-model = "personal_steaming"/>
+                            <input type="number" placeholder="" min="72" max="212" ng-disabled = "!is_steaming" ng-model = "settings.personal_steaming"/>
                         </label>
                         
                     </form>
