--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -2,18 +2,16 @@
     <ion-content padding="true" class="has-header">
         <form id="settings-form2" class="list ">
 <!--
->>>>>>> 0e0ce997e2ac896053645e1f987639df900e86a8
             <label class="item item-select " id="settings-select2">
                 <span class="input-label" ng-model = "temp_type" ng-change = "change_temptype()">Temperature Type</span>
                 <select>
                     <option>Fahrenheit</option>
                     <option>Celsius</option>
                 </select>
-
+            </label>
+-->
             <!--<ion-toggle toggle-class="toggle-assertive" id="settings-toggle6" class=" ">Preset Temperatures</ion-toggle> -->
         </form>
-        
-        
         <h4 style = "font-weight:300; text-align:center;">
                     Personal Preferences
         </h4>
@@ -58,4 +56,3 @@
             <strong>Warning</strong>: No temperature lower than current temperature can be set.</p>
     </ion-content>
 </ion-view>
->>>>>>> 0e0ce997e2ac896053645e1f987639df900e86a8
