--- a/www/templates/temperature.html
+++ b/www/templates/temperature.html
@@ -28,7 +28,7 @@
                     Set Temperature
                </h3>
                 <div class="temp">
-                <input type="number" name="quantity" ng-model = "temp" min=72 max=212 style = "font-size:30px" align = "middle" >
+                <center><input type="number" name="quantity" ng-model = "temp" min=72 max=212 style = "font-size:20px" ></center>
                 </div>
                 
             </form>
