bug in index.html fixed

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -12,7 +12,7 @@
 -->
             <!--<ion-toggle toggle-class="toggle-assertive" id="settings-toggle6" class=" ">Preset Temperatures</ion-toggle> -->
         </form>
-        <ion-toggle toggle-class="toggle-positive" id="bluetooth-toggle" class=" " >Bluetooth </ion-toggle>
+        <ion-toggle toggle-class="toggle-positive" id="bluetooth-toggle" class=" " ng-model = "is_on">Bluetooth </ion-toggle>
         <h4 style = "font-weight:300; text-align:center;">
                     Personal Preferences
         </h4>
